[gd_scene load_steps=9 format=3 uid="uid://unde2lvowa5h"]

[ext_resource type="Script" path="res://componentes/cardMeusQuizzes/cardMeusQuizzes.gd" id="1_ebr11"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="1_yhce4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4s71"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.227451, 0.258824, 0.521569, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_3by8i"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_r4s71")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgolk"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_xyoo1"]
Panel/styles/panel = SubResource("StyleBoxFlat_kgolk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1d1fn"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_g6774"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 22
Label/fonts/font = ExtResource("1_yhce4")
Label/styles/normal = SubResource("StyleBoxFlat_1d1fn")

[node name="PainelMeusQuizzes" type="PanelContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.134722
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3by8i")
script = ExtResource("1_ebr11")
metadata/_edit_use_anchors_ = true

[node name="MarginDentroDoPanel" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="Elementos" type="HBoxContainer" parent="MarginDentroDoPanel"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginDentroDoPanel/Elementos"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme = SubResource("Theme_xyoo1")

[node name="TituloQuiz" type="Label" parent="MarginDentroDoPanel/Elementos"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_g6774")
text = "[TITULO DO QUIZ]aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true
text_overrun_behavior = 3

[node name="BotoesContainer" type="VBoxContainer" parent="MarginDentroDoPanel/Elementos"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Editar" type="Button" parent="MarginDentroDoPanel/Elementos/BotoesContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "EDITAR"

[node name="Deletar" type="Button" parent="MarginDentroDoPanel/Elementos/BotoesContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "DELETAR"
